[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Containers/ContainerLife.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Containers/ContainerCarrot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Containers/ContainerCoinSilver.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Containers/ContainerCoinBronze.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Containers/ContainerCoinGold.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Containers/HUD.gd" type="Script" id=6]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="ContainerLife" parent="." instance=ExtResource( 1 )]
self_modulate = Color( 0.764706, 0.231373, 0.678431, 0.4 )
margin_top = 24.0
margin_bottom = 73.0

[node name="ContainerCarrot" parent="." instance=ExtResource( 2 )]
self_modulate = Color( 0.764706, 0.231373, 0.678431, 0.4 )
margin_top = 87.0
margin_bottom = 136.0

[node name="ContainerCoinGold" parent="." instance=ExtResource( 5 )]
self_modulate = Color( 0.764706, 0.231373, 0.678431, 0.4 )
margin_left = 906.0
margin_top = 21.0
margin_right = 1019.0
margin_bottom = 69.0

[node name="ContainerCoinSilver" parent="." instance=ExtResource( 3 )]
self_modulate = Color( 0.764706, 0.231373, 0.678431, 0.4 )
margin_left = 906.0
margin_top = 80.0
margin_right = 1019.0
margin_bottom = 128.0

[node name="ContainerCoinBronze" parent="." instance=ExtResource( 4 )]
self_modulate = Color( 0.764706, 0.231373, 0.678431, 0.4 )
margin_left = 906.0
margin_top = 139.0
margin_right = 1019.0
margin_bottom = 187.0
